--- a/pathway_search_standalone/environment.yml
+++ b/pathway_search_standalone/environment.yml
@@ -170,7 +170,7 @@ dependencies:
     - keras-nightly==2.5.0.dev2021032900
     - keras-preprocessing==1.1.2
     - kiwisolver==1.3.1
-    - map4==1.0
+    - git+https://github.com/reymond-group/map4
     - markdown==3.3.7
     - markupsafe==2.0.1
     - matplotlib==3.3.4
