--- a/process_reaction_database/environment.yml
+++ b/process_reaction_database/environment.yml
@@ -1,9 +1,9 @@
 name: sfscore_train
 channels:
-  - pytorch
-  - tmap
-  - conda-forge
   - defaults
+  - tmap
+  - pytorch
+  - conda-forge
 dependencies:
   - cudatoolkit=11.3.1=h2bc3f7f_2
   - cudnn=8.1.0.77=h90431f1_0
@@ -15,8 +15,9 @@ dependencies:
   - python=3.9.12=h12debd9_0
   - pytorch=1.12.1=py3.9_cuda11.3_cudnn8.3.2_0
   - seaborn=0.12.1=py39h06a4308_0
+  - pip==23.0.1
+  - tmap
   - pip:
-    - pip==23.0.1
     - rdkit-pypi==2022.3.5
-    - map4==1.0
+    - git+https://github.com/reymond-group/map4
 prefix: /home/xuan/miniconda3/envs/sfscore_train
