--- a/production-environment.yml
+++ b/production-environment.yml
@@ -118,6 +118,7 @@ dependencies:
       - kombu==4.6.8
       - lxml==5.2.2
       - git+https://github.com/reymond-group/map4@v1.0#egg=map4
+      - minio==7.1.0
       - markdown==3.2.1
       - markupsafe==2.0.1
       - matplotlib==3.2.2
