--- a/production-environment.yml
+++ b/production-environment.yml
@@ -176,7 +176,7 @@ dependencies:
       # - rxn-opennmt-py==1.1.5
       - rxn-utils==1.6.0
       # - rxnfp==0.0.9
-      - rxnmapper==0.4.0
+      # - rxnmapper==0.4.0
       - sacrebleu==2.4.2
       - sacremoses==0.0.53
       - scikit-learn==0.23.1
@@ -207,13 +207,14 @@ dependencies:
       - testpath==0.6.0
       - threadpoolctl==3.1.0
       - tinycss2==1.1.1
-      - tokenizers==0.9.3
+      - tokenizers==0.12.1
       - torch==1.10.2
       - torchtext==0.5.0
       - tornado==6.1
       - tqdm==4.38.0
       - traitlets==4.3.3
-      - transformers==3.5.1
+      # - transformers==3.5.1
+      - transformers==4.18.0
       - typing-extensions==4.1.1
       - ujson==4.3.0
       - urllib3==1.26.19
