--- a/process_reaction_database/environment.yml
+++ b/process_reaction_database/environment.yml
@@ -5,16 +5,16 @@ channels:
   - pytorch
   - conda-forge
 dependencies:
-  - cudatoolkit=11.3.1=h2bc3f7f_2
-  - cudnn=8.1.0.77=h90431f1_0
-  - future=0.18.2=py39h06a4308_1
-  - jupyterlab=3.4.4=py39h06a4308_0
-  - matplotlib=3.5.1=py39h06a4308_1
-  - numpy=1.21.5=py39he7a7128_2
-  - pandas=1.4.2=py39h295c915_0
-  - python=3.9.12=h12debd9_0
-  - pytorch=1.12.1=py3.9_cuda11.3_cudnn8.3.2_0
-  - seaborn=0.12.1=py39h06a4308_0
+  - cudatoolkit=11.3.1
+  - cudnn=8.1.0.77
+  - future=0.18.2
+  - jupyterlab=3.4.4
+  - matplotlib=3.5.1
+  - numpy=1.21.5
+  - pandas=1.4.2
+  - python=3.9.12
+  - pytorch=1.12.1
+  - seaborn=0.12.1
   - pip==23.0.1
   - tmap
   - pip:
